[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Chris Jewell <chrisjohnjewell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptopals"
path = "src/lib.rs"

[[bin]]
name = "cryptopalsbin"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
